<resources>
    <string name="app_name">Studycase1_ShinthyaYodaPutri_1202154311_SI3907</string>
    <string name="makan_malam">Makan Malam</string>
    <string name="restaurant">Restaurant</string>
    <string name="menu">Menu</string>
    <string name="makanan">Makanan</string>
    <string name="porsi">Porsi</string>
    <string name="jumlah">jumlah porsi</string>
    <string name="harga">Harga</string>
    <string name="total">total</string>
    <string name="masukan_menu">Masukan Menu</string>
    <string name="masukan_jumlah">Masukan Jumlah</string>
    <string name="dengan_milea">dengan Milea</string>
    <string name="eatbus">EATBUS</string>
    <string name="abnormal">ABNORMAL</string>
    <string name="test">test</string>
</resources>
