<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"

    tools:context="com.tugas2.shinthya.studycase1_shinthyayodaputri_1202154311_si3907.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/makan_malam"
        android:textSize="25sp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dengan_milea"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_gravity="center"
        />

    <EditText
        android:id="@+id/masukan_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/masukan_menu"
        android:layout_marginTop="25dp"
        />

    <EditText
        android:id="@+id/masukan_jumlah"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/masukan_jumlah"
        android:layout_marginTop="25dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <Button
        android:id="@+id/eatbus"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/masukan_jumlah"
        android:background="@color/colorAccent"
        android:text="@string/eatbus"
        android:textColor="#fff"
        android:layout_marginTop="20dp"
        android:layout_marginRight="50dp"
        android:layout_weight="1"
        android:onClick="LaunchEatbus"
        android:layout_marginEnd="50dp"
        android:layout_alignBaseline="@id/abnormal"
        android:layout_alignBottom="@id/abnormal"
        android:layout_alignEnd="@id/masukan_jumlah"
        android:layout_alignRight="@id/masukan_jumlah"
        />

    <Button
        android:id="@+id/abnormal"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/eatbus"
        android:layout_alignBottom="@id/eatbus"
        android:layout_alignEnd="@id/masukan_jumlah"
        android:layout_alignRight="@id/masukan_jumlah"
        android:background="@color/colorAccent"
        android:textColor="#fff"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:text="@string/abnormal"
        android:onClick="LaunchAbnormal"
        />

</LinearLayout>
</LinearLayout>